plugins {
	id 'org.springframework.boot' version '2.2.6.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com.learngine'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
	maven {
		url 'https://jitpack.io' // For wiremock extension
	}
}

dependencies {
	implementation 'org.apache.commons:commons-lang3:3.9'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.9.6'
	implementation 'org.hibernate.validator:hibernate-validator:6.0.10.Final'
	implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
	implementation 'net.sourceforge.htmlunit:htmlunit:2.38.0'
	implementation 'org.springframework.boot:spring-boot-starter'
//	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20191001.1'

	// Documentation, requires webflux libraries, not yet available in Springfox
	//	implementation 'io.springfox:springfox-swagger2:2.9.2'
	//	implementation 'io.springfox:springfox-swagger-ui:2.9.2'

	compileOnly 'org.projectlombok:lombok:1.18.6'
	compileOnly 'org.springframework.boot:spring-boot-devtools'

	annotationProcessor 'org.projectlombok:lombok:1.18.6'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'com.github.tomakehurst:wiremock-jre8:2.26.2'
	testImplementation 'com.github.JensPiegsa:wiremock-extension:0.4.0'
	testImplementation 'io.projectreactor:reactor-test:3.1.0.RELEASE'
	testImplementation 'org.testcontainers:testcontainers:1.13.0'
	testImplementation 'org.testcontainers:junit-jupiter:1.13.0'
	testImplementation 'org.testcontainers:selenium:1.13.0'

}

sourceSets {
	main {
		java {
			srcDir "${buildDir}/generated/sources/annotationProcessor/java/main"
		}
	}
}

test {
	useJUnitPlatform()
    // testLogging.showStandardStreams = true
	testLogging {
		events "passed", "failed", "skipped"
	}
}
